--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
                 <div class="form_field">
                     <label for="email">Email Address</label>
-                    <input type="email" name="user_email" id="email" placeholder="Required" required>
+                    <input type="email" name="user_email" id="email">
                 </div>
 
                 <div class="form_field">
                     <label for="phone_number">Phone Number</label>
-                    <input type="tel" name="user_phone_number" id="phone_number" placeholder="Required" required>
+                    <input type="tel" name="user_phone_number" id="phone_number">
                 </div>    
 
                 <div class="form_field">
@@ -41,7 +41,7 @@
 
                 <div class="form_field">
                     <label for="city">City</label>
-                    <input type="text" name="user_city" id="city">
+                    <input type="text" name="user_city" id="city" required placeholder="Required">
                 </div>
 
                 <div class="form_field"> 
@@ -59,7 +59,7 @@
 
                 <div class="form_field">
                     <label for="zip">Zip Code</label>
-                    <input type="number" name="user_zip" id="zip">
+                    <input type="text" name="user_zip" id="zip" pattern="[0-9]{5}" required placeholder="Required">
                 </div>
         </fieldset>
 
