Update for Portfolio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     </head>
 
     <body>
+        <div class="portfolioLinkHeader">
+            <p>You're Viewing Project: <span id="profileProjectName">Online Registration Form</span> • <a class="portfolioLink" href="https://akhazoyan.github.io/Portfolio/">Back to Amy K's Portfolio &rarr;</a></p>
+        </div>
+
         <header>
             <h1>The Code Review</h1>
             <div class="intro">
@@ -46,7 +50,7 @@
 
                 <div class="form_field"> 
                     <label for="state">State</label>
-                    <select required name="user_state" id="state" class="dropdown">
+                    <select name="user_state" id="state" class="dropdown">
                         <option disabled value="" selected hidden>Choose State</option>
                         <option value="alabama">Alabama</option>
                         <option value="alaska">Alaska</option>
